// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should match snapshot 1`] = `
.c0 {
  width: 100%;
}

<ul
  class="c0"
  role="listbox"
>
  <li
    role="option"
    tabindex="-1"
  >
    <span
      class=""
    >
      hello
    </span>
  </li>
  <li
    role="option"
    tabindex="-1"
  >
    <span
      class=""
    >
      world
    </span>
  </li>
</ul>
`;

exports[`Dropdown should work w/ a custom component and object value 1`] = `
.c0 {
  width: 100%;
}

<ul
  class="c0"
  role="listbox"
>
  <li
    role="option"
    tabindex="-1"
  >
    <span
      style="color: red;"
    >
      Hello
    </span>
  </li>
  <li
    role="option"
    tabindex="-1"
  >
    <span
      style="color: green;"
    >
      World
    </span>
  </li>
</ul>
`;
